Fix The “available at” button on mobile Remove shadow from around the cup/organic icons

--- a/web/source/sass/pages/strain/strain_detail.scss
+++ b/web/source/sass/pages/strain/strain_detail.scss
@@ -284,13 +284,14 @@
           text-align: center;
 
           img {
-            height: 5em;
+            height: 4em;
             margin-top: 1.2em;
           }
         }
 
         .clean {
           height: 4.8em;
+          margin-left: 0.2em;
         }
       }
 
@@ -1410,7 +1411,7 @@
 
           .cup-winner, .clean {
             img {
-              height: 7em;
+              height: 5em;
             }
           }
         }
@@ -1429,9 +1430,9 @@
     .strain-data {
       .location-controls {
         bottom: 1em;
+        margin: 0;
       }
     }
-
 
     .strain-info-wrapper {
       .popularity-wrapper .title {
@@ -1619,7 +1620,7 @@
 
       .match-score-wrapper {
         display: inline-block;
-        margin: 0 auto;
+        margin: 1em auto 0;
         vertical-align: top;
         width: 45%;
         text-align: center;
